--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
   	<div class="consist">
 		<div class="consist__frame">
-			<img src="images/ingridient_horne.jpg">
-			<div class="consist__frame-ingridient">Unicorn horne</div>
+			<img src="images/ingridient_horn.jpg">
+			<div class="consist__frame-ingridient">Unicorn horn</div>
 		</div>		
 		<div class="consist__frame-main"></div>	
 		<div class="consist__frame">
